// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Data generation for noir tests Computes contract info for defaultContract 1`] = `
{
  "address": "AztecAddress { inner: 0x1c7f9175f89e5a0c96ea1ad41a80456ff68ec0f358f087196947c355af2ef4a3 }",
  "artifact_hash": "0x0000000000000000000000000000000000000000000000000000000000003039",
  "contract_address_salt": "0x000000000000000000000000000000000000000000000000000000000000ddd5",
  "contract_class_id": "ContractClassId { inner: 0x2888d24c26f34b139f0f1d30278df8f9007d06da3b63cfe6eeb9a710d51f4f4a }",
  "deployer": "AztecAddress { inner: 0x0000000000000000000000000000000000000000000000000000000000000000 }",
  "partial_address": "PartialAddress { inner: 0x1a5c218d6824daa6487f48abe8d94ca6a70ae4d67149f9447694a5e37f5a3fd1 }",
  "private_functions_root": "0x2653ec1bf2be3a13fa9b645cec2557f2b543286fc39168ec42b705835a301bb6",
  "public_bytecode_commitment": "0x256abef672381d551191d5bbecf2dec6ac9cc2a81189f886ac22e29e5c58c49c",
  "public_keys": "PublicKeys { inner: 0x01498945581e0eb9f8427ad6021184c700ef091d570892c437d12c7d90364bbd170ae506787c5c43d6ca9255d571c10fa9ffa9d141666e290c347c5c9ab7e34400c044b05b6ca83b9c2dbae79cc1135155956a64e136819136e9947fe5e5866c1c1f0ca244c7cd46b682552bff8ae77dea40b966a71de076ec3b7678f2bdb1511b00316144359e9a3ec8e49c1cdb7eeb0cedd190dfd9dc90eea5115aa779e287080ffc74d7a8b0bccb88ac11f45874172f3847eb8b92654aaa58a3d2b8dc7833019c111f36ad3fc1d9b7a7a14344314d2864b94f030594cd67f753ef774a1efb2039907fe37f08d10739255141bb066c506a12f7d1e8dfec21abc58494705b6f }",
  "salted_initialization_hash": "SaltedInitializationHash { inner: 0x222d697ec3c42432bba23ee114f269a711025d4d323c459582b3a41bfe083a5b }",
}
`;

exports[`Data generation for noir tests Computes contract info for parentContract 1`] = `
{
  "address": "AztecAddress { inner: 0x183e7d850ab52acdbd328e7c32dc5f3c02a91e592816e57477b6c402a1ee5206 }",
  "artifact_hash": "0x00000000000000000000000000000000000000000000000000000000000004bc",
  "contract_address_salt": "0x0000000000000000000000000000000000000000000000000000000000001618",
  "contract_class_id": "ContractClassId { inner: 0x2998b9cf4a582f068a01b43c141dbcc5fd8f5cd17a797484b5a5db2386cf7574 }",
  "deployer": "AztecAddress { inner: 0x0000000000000000000000000000000000000000000000000000000000000000 }",
  "partial_address": "PartialAddress { inner: 0x1b44a0f6c77e402cd7abfe9a693244afc5eef217209c7a40feca970620524f9a }",
  "private_functions_root": "0x03cca4d59a01776df283eb2c8915cb144ad3f40a0b0ba06e9c24c532c59e3c43",
  "public_bytecode_commitment": "0x1cfb8e870870be1d102249b47923b63c2d54f33ca81e3028d74a06d8dd5944ca",
  "public_keys": "PublicKeys { inner: 0x01498945581e0eb9f8427ad6021184c700ef091d570892c437d12c7d90364bbd170ae506787c5c43d6ca9255d571c10fa9ffa9d141666e290c347c5c9ab7e34400c044b05b6ca83b9c2dbae79cc1135155956a64e136819136e9947fe5e5866c1c1f0ca244c7cd46b682552bff8ae77dea40b966a71de076ec3b7678f2bdb1511b00316144359e9a3ec8e49c1cdb7eeb0cedd190dfd9dc90eea5115aa779e287080ffc74d7a8b0bccb88ac11f45874172f3847eb8b92654aaa58a3d2b8dc7833019c111f36ad3fc1d9b7a7a14344314d2864b94f030594cd67f753ef774a1efb2039907fe37f08d10739255141bb066c506a12f7d1e8dfec21abc58494705b6f }",
  "salted_initialization_hash": "SaltedInitializationHash { inner: 0x277a14ecf6d685df4a8c6477491094f8842421a21bde3d7dae376d64e4b9c45f }",
}
`;

exports[`Data generation for noir tests Computes contract info for updatedContract 1`] = `
{
  "address": "AztecAddress { inner: 0x052b7564ad0fd7dd132533a4d9f96e49e050d3f1f71be5fa4653ffdca51379f2 }",
  "artifact_hash": "0x0000000000000000000000000000000000000000000000000000000000054501",
  "contract_address_salt": "0x0000000000000000000000000000000000000000000000000000000000000315",
  "contract_class_id": "ContractClassId { inner: 0x07a63b1343bb8515d1115202c71cdc95f9bcda9c2237bdfc25435b89ffa06b46 }",
  "deployer": "AztecAddress { inner: 0x0000000000000000000000000000000000000000000000000000000000000000 }",
  "partial_address": "PartialAddress { inner: 0x2a4ae86fa613593cfb3342b7cca37cb44429914a53770cc9209e0115042939e2 }",
  "private_functions_root": "0x2b26caef823c6be4c41ef1980dace9b61825f8e6a16792c765a2cd8cb2121e75",
  "public_bytecode_commitment": "0x225d884cfeaddc5292dadbf921e7699632336876c65a33459d3b2ad9b5ec0da3",
  "public_keys": "PublicKeys { inner: 0x01498945581e0eb9f8427ad6021184c700ef091d570892c437d12c7d90364bbd170ae506787c5c43d6ca9255d571c10fa9ffa9d141666e290c347c5c9ab7e34400c044b05b6ca83b9c2dbae79cc1135155956a64e136819136e9947fe5e5866c1c1f0ca244c7cd46b682552bff8ae77dea40b966a71de076ec3b7678f2bdb1511b00316144359e9a3ec8e49c1cdb7eeb0cedd190dfd9dc90eea5115aa779e287080ffc74d7a8b0bccb88ac11f45874172f3847eb8b92654aaa58a3d2b8dc7833019c111f36ad3fc1d9b7a7a14344314d2864b94f030594cd67f753ef774a1efb2039907fe37f08d10739255141bb066c506a12f7d1e8dfec21abc58494705b6f }",
  "salted_initialization_hash": "SaltedInitializationHash { inner: 0x02b91db090444ca006f9effeaa6fde13bae8f7b4b4eae439e24d711a69fce428 }",
}
`;

exports[`Data generation for noir tests Computes function tree for the private functions 1`] = `
{
  "data": "FunctionData { selector: FunctionSelector { inner: 0x000f69b5 }, is_private: true }",
  "membership_witness": "MembershipWitness {
        leaf_index: 0,
        sibling_path: [
0x0946489a51e1af5ea7f2e85a17cf2691a446760d8751199208b49acf72e1c0c7,
0x1eeeb8fb2c3d5ed2bdeb4545deda4551d41e22e63ebfe4e47e98d83847870dc9,
0x2974d8999d00928aa1378118756d6a4ba1368b1da89b2b1059c17fbb88ad21a8,
0x2e6127fb2bcf542677ed9dfc6cd90a61a075142999aebccf345c816aff3a1d92,
0x267a9c24e849f51869c93086ded207858dfb130344e1879a9d15d35096464824,
0x1eb5f748aca7413c8875abf2789be0a1aec323884a365d9a59a1859aa2bce94e,
0x2402a100768c2e339831cdb0b63e5c272a6f3318323a37642bea76ab5ea1ed0c
],
    }",
  "vk_hash": "0x000000000000000000000000000000000000000000000000000000000001e0f3",
}
`;

exports[`Data generation for noir tests Computes function tree for the private functions 2`] = `
{
  "data": "FunctionData { selector: FunctionSelector { inner: 0x00051a77 }, is_private: true }",
  "membership_witness": "MembershipWitness {
        leaf_index: 0,
        sibling_path: [
0x0b63a53787021a4a962a452c2921b3663aff1ffd8d5510540f8e659e782956f1,
0x1eeeb8fb2c3d5ed2bdeb4545deda4551d41e22e63ebfe4e47e98d83847870dc9,
0x2974d8999d00928aa1378118756d6a4ba1368b1da89b2b1059c17fbb88ad21a8,
0x2e6127fb2bcf542677ed9dfc6cd90a61a075142999aebccf345c816aff3a1d92,
0x267a9c24e849f51869c93086ded207858dfb130344e1879a9d15d35096464824,
0x1eb5f748aca7413c8875abf2789be0a1aec323884a365d9a59a1859aa2bce94e,
0x2402a100768c2e339831cdb0b63e5c272a6f3318323a37642bea76ab5ea1ed0c
],
    }",
  "vk_hash": "0x00000000000000000000000000000000000000000000000000000000000c0d1d",
}
`;

exports[`Data generation for noir tests Computes function tree for the private functions 3`] = `
{
  "data": "FunctionData { selector: FunctionSelector { inner: 0x000f69b5 }, is_private: true }",
  "membership_witness": "MembershipWitness {
        leaf_index: 0,
        sibling_path: [
0x1260f4354ff916029a970f9d72fea65c206f1a7be4b8f2864eea26d90dd66caf,
0x1eeeb8fb2c3d5ed2bdeb4545deda4551d41e22e63ebfe4e47e98d83847870dc9,
0x2974d8999d00928aa1378118756d6a4ba1368b1da89b2b1059c17fbb88ad21a8,
0x2e6127fb2bcf542677ed9dfc6cd90a61a075142999aebccf345c816aff3a1d92,
0x267a9c24e849f51869c93086ded207858dfb130344e1879a9d15d35096464824,
0x1eb5f748aca7413c8875abf2789be0a1aec323884a365d9a59a1859aa2bce94e,
0x2402a100768c2e339831cdb0b63e5c272a6f3318323a37642bea76ab5ea1ed0c
],
    }",
  "vk_hash": "0x0000000000000000000000000000000000000000000000000000000000001e6c",
}
`;
